--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: Matthias Wess
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://mwessley.github.io/'
+url: 'https://mwessley.github.io'
 baseurl: '/CDL_EML_webpage'
 
 # This is for the editing function in _/includes/improve_content
@@ -119,7 +119,7 @@ defaults:
       type: 'posts'
     values:
       show_meta: true   # Show metadata for all posts
-      # sidebar:        # Possible values › left, right › by default there will be no sidebar
+      # sidebar: left        # Possible values › left, right › by default there will be no sidebar
       comments: false
       author: phlow     # Default author for posts
 
