--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,27 +1,27 @@
 - name: GitHub
-  url: http://github.com/phlow
+  url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
   class: icon-github
   title: Code und mehr...
 
 - name: YouTube
-  url: http://www.youtube.com/PhlowMedia
+  url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
   class: icon-youtube
-  title: "Videos, Video-Anleitungen und Filme von Phlow auf YouTube"
+  title: "Videos, Video-Anleitungen und Filme von CDL-EML auf YouTube"
 
-- name: Twitter
-  url: http://twitter.com/phlow
-  class: icon-twitter
-  title: "Immer das Neuste von Phlow gibt es auf Twitter"
+#- name: Twitter
+#  url: http://twitter.com/phlow
+#  class: icon-twitter
+#  title: "Immer das Neuste von Phlow gibt es auf Twitter"
 
-- name: Mixcloud
-  url: http://www.mixcloud.com/phlow/
-  class: icon-cloud
-  title: "Mixe, was sonst?"
+#- name: Mixcloud
+#  url: http://www.mixcloud.com/phlow/
+#  class: icon-cloud
+#  title: "Mixe, was sonst?"
 
-- name: Phlow YouTube Google+
-  url: https://plus.google.com/u/0/+Phlow
-  class: icon-googleplus
-  title: "YouTube Google+"
+#- name: Phlow YouTube Google+
+#  url: https://plus.google.com/u/0/+Phlow
+#  class: icon-googleplus
+#  title: "YouTube Google+"
 
 # - name: Facebook
 #   url: http://www.facebook.com/
