--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author: matthias
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://mwessley.github.io'
-baseurl: '/CDL_EML_webpage'
+url: 'https://eml.ict.tuwien.ac.at'
+baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
